# subpakcage-a

./: .gitignore  pyproject.toml
src/subpackage_a/: testA.py
